Successfully getting the profile pic

--- a/css/styles.css
+++ b/css/styles.css
@@ -11442,6 +11442,10 @@ html {
   font-size: 1.25rem;
 }
 .masthead .masthead-avatar {
+  border-radius: 25px;
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
   width: 15rem;
 }
 
